# AgentTeams

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.ja-JP.md  README.md  README.zh-CN.md
agentteams-controller/: Dockerfile  Dockerfile.embedded  Makefile  go.mod  supervisord.embedded.conf
blog/: agentteams-1.1.0-release.md  agentteams-k8s-native-multi-agent-collaboration.md
changelog/: current.md  v1.2.0-beta.1.md
copaw/: AGENTS.md  Dockerfile  README.md  pyproject.toml
dashboard/: Dockerfile  README.md
docs/: agent-pod-template.md  ai-coworking-reshape-plan.md  architecture.md  cms-integration.md  credagent-config.md  declarative-resource-management.md  delivery-recovery.md  development.md  embedded-docker-layout.md  faq.md  feature-proposals.md  implementation-milestone-1.md  implementation-milestone-2.md  implementation-milestone-3.md  import-worker.md  k8s-native-agent-orch.md  manager-guide.md  member-runtime-config-contract.md  quickstart.md  restore.md  teamharness-boundary-and-contracts.md  teamharness-project-task-runtime-design.md  teamharness-runtime-integration-tdd-plan.md  upstream-integration-migration.md  windows-deploy.md  worker-guide.md
hack/: kind-config.yaml  local-k8s-down.sh  local-k8s-up.sh  mirror-images.sh
hermes/: Dockerfile  README.md  pyproject.toml
hiclaw-controller/: Dockerfile  Dockerfile.embedded  go.mod  healthcheck.sh  preflight.sh
install/: README.md  agentteams-apply.sh  agentteams-import.ps1  agentteams-import.sh  agentteams-install.ps1  agentteams-install.sh  agentteams-verify.sh  defaults.env  hiclaw-apply.sh  hiclaw-import.ps1  hiclaw-import.sh  hiclaw-install.ps1  hiclaw-install.sh  hiclaw-verify.sh
manager/: Dockerfile  Dockerfile.copaw  README.md  supervisord.conf
openclaw-base/: Dockerfile
openhuman/: Dockerfile
openwiki/: .last-update.json  quickstart.md
qwenpaw/: AGENTS.md  Dockerfile  README.md  pyproject.toml
qwenpaw/scripts/: qwenpaw-teamharness-plugin-reload.sh  qwenpaw-worker-entrypoint.sh
qwenpaw/src/matrix/: channel.py
qwenpaw/src/qwenpaw_worker/: heartbeat.py  update.py  worker.py
qwenpaw/src/qwenpaw_worker/update/: agent_package.py
qwenpaw/tests/: test_defer_mcp_startup_patch.py  test_heartbeat.py  test_package_update.py  test_runtime_config.py  test_update.py  test_worker_lifecycle.py
qwenpaw/tests/integration/: test-real-image-model-api.sh  test-sync-minio.sh  test-update-runtime-config.sh
qwenpaw/tests/integration/lib/: qwenpaw-image-e2e.sh
scripts/: export-debug-log.py  provision-worker-gitea.sh  replay-task.sh
shared/python/agentteams_matrix_format/: pyproject.toml
shared/python/agentteams_matrix_policies/: pyproject.toml
shared/python/agentteams_openclaw_merge/: pyproject.toml
shared/python/agentteams_protocol/: pyproject.toml
shared/python/agentteams_protocol/src/agentteams_protocol/: __init__.py  task.py
shared/python/agentteams_protocol/tests/: test_verify_artifacts.py
shared/python/agentteams_sync/: pyproject.toml
shared/python/agentteams_sync/src/agentteams_sync/: contract.py  filesync.py  helpers.py  mc.py  openclaw.py  openclaw_matrix.py  push.py
shared/python/agentteams_sync/tests/: test_openclaw_matrix.py
tests/: README.md  check-agentteams-rename-defaults.sh  check-helm-agentteams.sh  run-all-tests.sh  test-01-manager-boot.sh  (+24 more)
(+873 files in other folders)
