[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentteams-matrix-format"
version = "0.1.0"
description = "Shared Matrix markdown → HTML formatting for AgentTeams runtimes"
requires-python = ">=3.10"
dependencies = [
    "markdown-it-py>=3.0",
    "linkify-it-py>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
